# rosey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_GUIDE.md  LICENSE  PHASE_B_SUMMARY.md  README.md  Rosey.sln  demo_tmdb_pattern.py  pyproject.toml  reproduce_issue.py  reproduce_show_folder.py  rosey-gui.spec  rosey.spec  rosey_cli.spec
.github/workflows/: ci.yml
Rosey/: DirectoryProcessor.cs  FileProcessor.cs  Program.cs  Rosey.csproj  Sanitizer.cs  appsettings.json
Rosey.Tests/: DirectoryProcessorTests.cs  FileInfoToNameTests.cs  Rosey.Tests.csproj
Rosey/Extensions/: StringExtentions.cs
Rosey/Models/: FileMetaInfo.cs
Rosey/Properties/: launchSettings.json
docs/: AI_AGENT_PLAYBOOK.md  CONFIG_SCHEMA.md  DEVELOPMENT_POLICIES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE_A_SUMMARY.md  PHASE_D_SUMMARY.md  PHASE_E_SUMMARY.md  PRD.md  README.md  SCAN_ENHANCEMENTS.md  SETUP.md  STRUCTURED_ISSUES.md  TECH_SPEC.md
docs/mockups/: EVENTS_CONTRACT.md  SAMPLE_DATA.json  UI_COMPONENT_IDS.md  UI_MOCKUPS.md
scripts/: build_package.bat  build_package.sh  smoke_test.bat  smoke_test.sh  test_quality.sh
src/rosey/: __init__.py  app.py  cli.py  models.py
src/rosey/config/: __init__.py
src/rosey/grouper/: __init__.py  grouper.py
src/rosey/identifier/: __init__.py  identifier.py  nfo.py  patterns.py
src/rosey/mover/: __init__.py  mover.py
src/rosey/planner/: __init__.py  planner.py
src/rosey/providers/: __init__.py  base.py  cache.py  manager.py  tmdb.py  tvdb.py
src/rosey/scanner/: __init__.py  scanner.py
src/rosey/scorer/: __init__.py  scorer.py
src/rosey/tasks/: __init__.py  move_task.py
src/rosey/ui/: __init__.py  conflict_dialog.py  details_dialog.py  identify_dialog.py  main_window.py  progress_dialog.py  settings_dialog.py
src/rosey/utils/: __init__.py  logging.py
tests/: README.md  conftest.py  helpers.py
tests/fixtures/: README.md
tests/fixtures/providers/: tmdb_episode_2316_s02e01.json  tmdb_movie_603.json  tmdb_search_movie_matrix.json  tmdb_search_tv_office.json  tmdb_tv_2316.json
tests/identifier/: test_companion_files.py  test_filenames_movies.py  test_filenames_tv.py
tests/identifier/fixtures/: filenames_movies.csv  filenames_tv.csv
tests/integration/: test_mover_workflow.py  test_scan_workflow.py
tests/unit/: test_cache.py  test_config.py  test_grouper.py  test_identifier.py  test_logging.py  test_main_window.py  test_models.py  test_move_task.py  test_mover.py  test_packaging.py  test_patterns.py  test_planner.py  test_progress_dialog_stats.py  test_provider_manager.py  test_providers.py  test_scanner.py  test_scorer.py  test_subtitle_detection.py  test_tmdb_parsing.py  test_tvdb.py
